--- a/src/app/feature/historial/pages/historial/historial.component.html
+++ b/src/app/feature/historial/pages/historial/historial.component.html
@@ -2,7 +2,7 @@
   <h2>History of routes</h2>
 
   <!-- Mostrar un spinner mientras se cargan los datos -->
-  <div *ngIf="isLoading" class="loading-spinner">
+  <div *ngIf="isLoading()" class="loading-spinner">
     <mat-progress-spinner
     color="primary"
     mode="indeterminate"
@@ -11,8 +11,8 @@
   </div>
 
   <!-- Mostrar un mensaje de error si ocurre algún problema-->
-  <div *ngIf="!isLoading && errorMessage" class="error-message">
-    <p>{{ errorMessage }}</p>
+  <div *ngIf="!isLoading() && errorMessage()" class="error-message">
+    <p>{{ errorMessage() }}</p>
 
     <svg class="block-svg" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg" xml:space="preserve">
       <path d="M267.44 12.68c-3.44 2.49-3.44 4.79-1.34 63.55 1.34 39.43 1.34 62.02.19 64.31-3.44 6.51-10.14 6.12-23.73-1.34-10.91-6.13-13.4-6.89-17.42-4.98-2.68 1.15-5.17 3.25-5.74 4.79-.57 1.53 4.98 31.39 12.44 66.04l13.59 63.36v115.8l9.38 27.95c5.17 15.31 12.25 33.5 15.5 40.2 17.42 34.84 46.7 68.52 76.18 88.05 15.7 10.15 15.89 10.34 14.93 17.04-.57 3.64-1.15 8.61-1.15 10.72 0 4.02-1.15 4.21-29.09 5.17-22.78.77-32.35 1.91-42.68 5.17-18.18 5.74-37.71 17.42-50.15 30.43-16.85 17.58-105.28 135.68-112.55 150.42-11.29 22.59-12.44 30.82-12.44 82.3 0 34.84.77 48.81 2.87 57.42 8.23 32.54 32.16 62.21 62.02 77.14 25.07 12.63 23.16 15.5 23.16-35.98 0-48.23.57-51.68 10.91-58.95 8.8-6.13 16.46-6.89 26.22-2.49 15.89 6.89 16.46 9.19 16.46 63.74V990h375.16v-47.47c0-43.45.38-47.85 3.83-53.4 7.47-12.44 20.1-16.27 33.31-10.33 15.89 6.89 16.46 9.19 16.46 63.54v47.09l10.53-1.72c36.75-5.74 70.63-31.2 86.9-65.27 11.48-24.31 12.63-31.2 12.63-79.82 0-34.64-.77-45.55-3.45-55.51-4.4-16.84-14.93-37.13-25.65-49.77l-9-10.53h-31.77c-27.18 0-33.88-.57-47.85-4.4-65.47-17.99-116-69.67-132.46-135.51-6.13-25.27-5.93-63.55.96-89 5.36-20.67 16.65-44.79 29.09-62.01 16.27-22.78 47.28-48.43 71.01-58.76l10.34-4.4V281.8c0-100.1-.19-101.83-12.06-126.33-8.42-17.42-32.35-41.34-49.38-49.38-24.12-11.48-27.75-11.87-110.82-12.06h-75.61L390.9 72.78c-9-11.67-18.57-22.97-21.44-25.07-4.79-3.64-5.36-3.64-9.95-.57-2.68 1.72-4.98 4.59-4.98 6.51 0 4.98-3.83 8.04-9.76 8.04-3.83 0-13.4-6.7-36.37-25.84-17.23-14.16-32.73-25.84-34.26-25.84-1.72-.01-4.78 1.14-6.7 2.67z"/>
@@ -22,7 +22,7 @@
   </div>
 
   <!-- Mostrar la lista de rutas-->
-  <ul *ngIf="!isLoading && !errorMessage && routeHistory.length > 0" class="history-list">
+  <ul *ngIf="!isLoading() && !errorMessage() && routeHistory.length > 0" class="history-list">
     <li *ngFor="let route of routeHistory" class="history-item">
       <div class="route-info">
         <div class="route-info-time">
@@ -53,7 +53,7 @@
   </ul>
 
   <!-- Mostrar un mensaje si no hay rutas en el historial -->
-  <div *ngIf="!isLoading && !errorMessage && routeHistory.length === 0" class="no-history">
+  <div *ngIf="!isLoading() && !errorMessage() && routeHistory.length === 0" class="no-history">
     <p>No routes were found in your history.</p>
   </div>
 </div>
