--- a/src/app/feature/register/components/modal-register/modal-register.component.scss
+++ b/src/app/feature/register/components/modal-register/modal-register.component.scss
@@ -1,10 +1,19 @@
 @import 'settings';
 @import 'mixins';
 
+.loading-spinner{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center; /* Centrado horizontal */
+  align-items: center;     /* Centrado vertical */
+}
+
 .register-modal {
   background-color: #ffffff; /* Fondo blanco */
   padding: 20px;
   width: 350px;
+  height: 460px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra elegante */
   position: absolute;
