--- a/src/app/feature/login/components/modal-login/modal-login.component.scss
+++ b/src/app/feature/login/components/modal-login/modal-login.component.scss
@@ -16,7 +16,10 @@
 .login-modal {
   background-color: #fff; /* Fondo blanco */
   padding: 20px;
-  width: 200px;
+  width: 280px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 360px;
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
@@ -27,6 +30,7 @@
     left: 150px;
     top: 0px;
     width: 300px;
+    transform: none;
   }
   h2 {
     font-size: 24px;
