--- a/src/app/feature/register/components/modal-register/modal-register.component.scss
+++ b/src/app/feature/register/components/modal-register/modal-register.component.scss
@@ -12,17 +12,21 @@
 .register-modal {
   background-color: #ffffff; /* Fondo blanco */
   padding: 20px;
-  width: 350px;
+  width: 280px;
   height: 460px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra elegante */
   position: absolute;
   z-index: 1000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   @include md() {
     left: 150px;
     top: 0px;
     width: 300px;
+    transform: none;
   }
 
   h2 {
