--- a/src/app/feature/graficos/pages/graficos/graficos.component.scss
+++ b/src/app/feature/graficos/pages/graficos/graficos.component.scss
@@ -1,7 +1,7 @@
 .container-main-chart{
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100vh;
+  height: 100dvh;
   padding-bottom: 50px;
   @media (min-width: 768px) {
     padding-bottom: 0px;
