--- a/src/app/feature/historial/pages/historial/historial.component.scss
+++ b/src/app/feature/historial/pages/historial/historial.component.scss
@@ -1,7 +1,7 @@
 .historial-container {
   padding: 20px;
   margin: 0 auto;
-  max-height: 100vh;
+  max-height: 100dvh;
   overflow-y: auto;
   overflow-x: hidden;
   /* Estilos para el desplazamiento */
@@ -105,6 +105,7 @@
         flex-shrink: 0; /* Evita que la imagen se reduzca demasiado */
         width: 100%; /* Ajusta dinámicamente */
         img {
+          aspect-ratio: auto 390 / 260;
           width: 100%; /* Asegura que la imagen se ajuste al contenedor */
           border-radius: 4px;
           object-fit: cover; /* Ajusta la imagen sin distorsión */
